--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icon.png" >
-    <title>index-test</title>
+    <title>39s-moe</title>
     <style>
         .border{
             border: 2px solid #39c5bb;
