--- a/index.html
+++ b/index.html
@@ -6,15 +6,27 @@
     <link rel="shortcut icon" href="icon.png" >
     <title>39s-moe</title>
     <style>
+        .img{
+            display: flex;
+            justify-content: center;
+            margin-top: 3%;
+        }
         .border{
             border: 2px solid #39c5bb;
             width: max-content;
+            margin-top: 30px;
+            margin-right: auto;
+            margin-bottom: auto;
+            margin-left: auto;
         }
     </style>
 </head>
 <body>
-<div class="border">
-<pre>
+    <div class="img">
+        <img src="title.png" height="300px" width="300px">
+    </div>
+    <div class="border">
+        <pre>
     Welcome to oldcat's 39s site  ❀
 
     _      __
@@ -24,7 +36,7 @@
            /                    ￣
 
                          _(≧∇≦」∠)_
-</pre>
-</div>
+        </pre>
+    </div>
 </body>
 </html>
