--- a/lottery/index.html
+++ b/lottery/index.html
@@ -7,17 +7,25 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="bg"><div class="header">当前开奖结果是</div></div>
+
+    <table border="1" class="result">
+    <td class="pink result"><span class="font">1</span><img src="a.png" alt="粉毛 1" class="imgs"> </td>
+    </table>
+
+
+
     <table border="1" class="table">
       <tr>
-        <td rowspan="2" colspan="2" style="vertical-align: bottom; text-align:right;"> ×&ensp;&ensp;<br>4 ☞</td>
+        <td rowspan="2" colspan="2" style="vertical-align: bottom; text-align:right;"> × &ensp;&ensp;<br>4 ☞</td>
         <td colspan="2" class="text-align: center;">×2</td>
         <td colspan="2">×2</td>
       </tr>
-      <tr>
-        <td>A</td>
-        <td>B</td>
-        <td>X</td>
-        <td>Y</td>
+      <tr class="name">
+        <td>Emu</td>
+        <td>Mafuyu</td>
+        <td>Nene</td>
+        <td>Kanade</td>
       </tr>
       <!-- <td class="empty"></td> -->
       <tr>
