阿斯顿萨德萨德萨德

--- a/lottery/index.html
+++ b/lottery/index.html
@@ -10,7 +10,8 @@
     <div class="bg"><div class="header">当前开奖结果是</div></div>
 
     <table border="1" class="result">
-    <td class="pink result"><span class="font">1</span><img src="a.png" alt="粉毛 1" class="imgs"> </td>
+    <td class="pink result">
+        <span class="font">1</span><img src="a.png" alt="粉毛 1" class="imgs"> </td>
     </table>
 
 
@@ -31,7 +32,8 @@
       <tr>
         <td rowspan="2">×<br>3</td>
         <td>×<br>6</td>
-        <td class="pink"><span class="font">1</span><img src="a.png" alt="粉毛 1" class="imgs"> </td>
+        <td></td>
+        <!-- <td class="pink"><span class="font">1</span><img src="a.png" alt="粉毛 1" class="imgs"> </td> -->
         <td class="purple"><span class="font">1</span><img src="b.png" alt="紫毛 1" class="imgs"> </td>
         <td class="green"><span class="font">1</span><img src="c.png" alt="绿毛 1" class="imgs"> </td>
         <td  class="blue"><span class="font">1</span><img src="d.png" alt="蓝毛 1" class="imgs"> </td>
