网速提示警告加入

--- a/index.html
+++ b/index.html
@@ -3,27 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="icon.png" >
     <title>39s-moe</title>
-    <style>
-        .img{
-            display: flex;
-            justify-content: center;
-            margin-top: 3%;
-        }
-        .border{
-            border: 2px solid #39c5bb;
-            width: max-content;
-            margin-top: 30px;
-            margin-right: auto;
-            margin-bottom: auto;
-            margin-left: auto;
-        }
-    </style>
 </head>
 <body>
     <div class="img">
-        <img src="title.png" height="300px" width="300px">
+        <img src="title.png" height="300px" width="300px" alt="title_img">
     </div>
     <div class="border">
 <pre>
@@ -38,5 +24,7 @@
                          _(≧∇≦」∠)_
 </pre>
     </div>
+    <div id="warning-box"></div>
+    <script src="script.js"></script>
 </body>
 </html>
