--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                          _(≧∇≦」∠)_
 </pre>
     </div>
-    <div id="warning-box"></div>
-    <script src="script.js"></script>
+    <!-- <div id="warning-box"></div>
+    <script src="script.js"></script> -->
 </body>
 </html>
