--- a/test/index.html
+++ b/test/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="bg"><div class="header">当前开奖结果是</div></div>
+    <!-- <div class="bg"><div class="header">当前开奖结果</div></div> -->
 
     <table border="1" class="result">
-    <td class="pink result">
-        <span class="font">1</span><img src="a.png" alt="粉毛 1" class="imgs"> </td>
+    <td class=" result">
+        <!-- <span class="font">1</span><img src="a.png" alt="粉毛 1" class="imgs"> </td> -->
     </table>
 
 
@@ -23,17 +23,17 @@
         <td colspan="2">×2</td>
       </tr>
       <tr class="name">
-        <td>Emu</td>
-        <td>Mafuyu</td>
-        <td>Nene</td>
-        <td>Kanade</td>
+        <td>A</td>
+        <td>B</td>
+        <td>C</td>
+        <td>D</td>
       </tr>
       <!-- <td class="empty"></td> -->
       <tr>
         <td rowspan="2">×<br>3</td>
         <td>×<br>6</td>
-        <td></td>
-        <!-- <td class="pink"><span class="font">1</span><img src="a.png" alt="粉毛 1" class="imgs"> </td> -->
+        <!-- <td></td> -->
+        <td class="pink"><span class="font">1</span><img src="a.png" alt="粉毛 1" class="imgs"> </td>
         <td class="purple"><span class="font">1</span><img src="b.png" alt="紫毛 1" class="imgs"> </td>
         <td class="green"><span class="font">1</span><img src="c.png" alt="绿毛 1" class="imgs"> </td>
         <td  class="blue"><span class="font">1</span><img src="d.png" alt="蓝毛 1" class="imgs"> </td>
