--- a/test/index.html
+++ b/test/index.html
@@ -10,8 +10,8 @@
     <div class="bg"><div class="header">当前开奖结果</div></div>
 
     <table border="1" class="result">
-    <td class="purple result">
-        <span class="font">2</span><img src="b.png" alt="粉毛 1" class="imgs"> </td>
+    <td class="blue result">
+        <span class="font">5</span><img src="d.png" alt="" class="imgs"> </td>
     </table>
 
 
@@ -52,7 +52,8 @@
         <td class="pink"><span class="font">3</span><img src="a.png" alt="粉毛 3" class="imgs"> </td>
         <td class="purple"><span class="font">3</span><img src="b.png" alt="紫毛 3" class="imgs"> </td>
         <td class="green"><span class="font">3</span><img src="c.png" alt="绿毛 3" class="imgs"> </td>
-        <td class="blue"><span class="font">3</span><img src="d.png" alt="蓝毛 3" class="imgs"> </td>
+        <td></td>
+        <!-- <td class="blue"><span class="font">3</span><img src="d.png" alt="蓝毛 3" class="imgs"> </td> -->
     </tr>
     <tr>
         <td>×<br>6</td>
@@ -67,7 +68,8 @@
         <td class="pink"><span class="font">5</span><img src="a.png" alt="粉毛 5" class="imgs"> </td>
         <td class="purple"><span class="font">5</span><img src="b.png" alt="紫毛 5" class="imgs"> </td>
         <td class="green"><span class="font">5</span><img src="c.png" alt="绿毛 5" class="imgs"> </td>
-        <td class="blue"><span class="font">5</span><img src="d.png" alt="蓝毛 5" class="imgs"> </td>
+        <td></td>
+        <!-- <td class="blue"><span class="font">5</span><img src="d.png" alt="蓝毛 5" class="imgs"> </td> -->
     </tr>
     <tr>
         <td>×<br>6</td>
