--- a/test/index.html
+++ b/test/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="bg"><div class="header">当前开奖结果</div></div>
+    <div class="bg"><div class="header">开完了~最后一奖是：</div></div>
 
     <table border="1" class="result">
     <td class="pink result">
-        <span class="font">1</span><img src="a.png" alt="" class="imgs"> </td>
+        <span class="font">2</span><img src="a.png" alt="" class="imgs"> </td>
     </table>
 
 
@@ -41,8 +41,8 @@
     </tr>
     <tr>
         <td>×<br>6</td>
-        <td class="pink"><span class="font">2</span><img src="a.png" alt="粉毛 2" class="imgs"> </td>
-        <td></td>
+        <!-- <td class="pink"><span class="font">2</span><img src="a.png" alt="粉毛 2" class="imgs"> </td> -->
+        <td></td><td></td>
         <!-- <td class="purple"><span class="font">2</span><img src="b.png" alt="紫毛 2" class="imgs"> </td> -->
         <td class="green"><span class="font">2</span><img src="c.png" alt="绿毛 2" class="imgs"> </td>
         <td class="blue"><span class="font">2</span><img src="d.png" alt="蓝毛 2" class="imgs"> </td>
