--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" href="icon.png" >
     <title>39s-moe</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9553680976152578"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="img">
